Fix navigation bar style

--- a/_config.yml
+++ b/_config.yml
@@ -139,7 +139,7 @@ page-col: "#FFFFFF"
 text-col: "#666666"
 link-col: "#8000ff"
 hover-col: "#6600ff"
-navbar-img: "/assets/img/bgimage2.png"
+navbar-img: "assets/img/bgimage_2.jpg"
 navbar-text-col: "#666666"
 navbar-border-col: "#aa80ff"
 footer-col: "#ccccff"
